# mist

./: .gitattributes  .gitignore  .gitmodules  .gitsubmodules  CMakeLists.txt  ClearProject.bat  ClearShaders.bat  CommonMacros.txt  Dependencies.lua  GenerateProject.bat  README.md  mist.code-workspace  premake5.lua
assets/: default.cfg
assets/scenes/: Emissive.yaml  Empty.yaml  Scene.yaml  Sponza.yaml  bistro.yaml  shadowmap.yaml  vkscene.yaml
assets/shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  bloom.comp  bloom.frag  deferred.frag  depth.vert  depth_quad.frag  emissive.frag  forward_lighting.frag  forward_lighting.vert  gbuffer_main.vert  gol.comp  gol.frag  hdr.frag  line.frag  line.vert  mix.frag  model.vert  mrt.frag  mrt.vert  particles.comp  particles.frag  particles.vert  postprocess_quad.frag  preprocess_brdf.frag  preprocess_equirectangular_cubemap.frag  preprocess_equirectangular_cubemap.vert  preprocess_irradiance_cubemap.frag  preprocess_specular_cubemap.frag  present.frag  present.frag.spv  present.vert  present.vert.spv  quad.frag  quad.vert  screenquad.frag  screenquad.vert  skybox.frag  (+8 more)
assets/shaders/gbuffer/: deferred.frag  deferred.vert  gbuffer_mrt.frag  mrt.vert
assets/shaders/includes/: camera.glsl  environment.glsl  environment_data.glsl  gbuffer.glsl  gbuffer_read.glsl  gbuffer_write.glsl  lighting.glsl  material.glsl  math.glsl  model.glsl  vertex_mesh.glsl
assets/textures/: flamingo_pan_4k.exr
code/: CMakeLists.txt
code/include/mist/: Application.h  Camera.h  CmdParser.h  Mesh.h  RenderEngine.h  RenderObject.h  Scene.cpp  Scene.h  TimeUtils.h  Vertex.h
code/include/mist/Core/: Logger.h  SystemMemory.h  Types.h
code/include/mist/Render/: Mesh.h  RenderEngine.h  RenderHandle.h  RenderObject.h
code/include/mist/Scene/: Scene.cpp  Scene.h
code/include/vkmmc/: Camera.h  Mesh.h  RenderEngine.h  RenderHandle.h  RenderObject.h  Scene.h  SceneLoader.h  TimeUtils.h  Vertex.h
code/src/: Application.cpp  Camera.cpp  CmdParser.cpp  Debug.cpp  Debug.h  DeferredRender.cpp  DeferredRender.h  Framebuffer.cpp  Framebuffer.h  FunctionStack.h  GenericUtils.cpp  GenericUtils.h  Globals.cpp  Globals.h  InitVulkanTypes.cpp  InitVulkanTypes.h  Logger.cpp  Logger.h  Main.cpp  Memory.cpp  Memory.h  Mesh.cpp  RenderAPI.cpp  RenderAPI.h  RenderContext.cpp  RenderContext.h  RenderDescriptor.cpp  RenderDescriptor.h  RenderEngine.cpp  RenderObject.cpp  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h  RenderTypes.cpp  RenderTypes.h  (+23 more)
code/src/Application/: Application.cpp  Camera.cpp  CmdParser.cpp
code/src/Core/: Debug.cpp  Debug.h  Logger.cpp  Memory.cpp  Memory.h  SystemMemory.cpp  SystemMemory.h  VideoMemory.cpp  VideoMemory.h
code/src/Render/: Framebuffer.cpp  Framebuffer.h  InitVulkanTypes.cpp  InitVulkanTypes.h  Mesh.cpp  RenderAPI.cpp  RenderAPI.h  RenderContext.cpp  RenderContext.h  RenderDescriptor.cpp  RenderDescriptor.h  RenderEngine.cpp  RenderObject.cpp  RenderPass.cpp  RenderPass.h  RenderTarget.cpp  RenderTarget.h  RenderTypes.cpp  RenderTypes.h  RendererBase.cpp  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanRenderEngine.cpp  VulkanRenderEngine.h
code/src/Render/RenderProcesses/: DebugProcess.cpp  DebugProcess.h  GBuffer.cpp  GBuffer.h  GPUParticleSystem.cpp  GPUParticleSystem.h  Lighting.cpp  Lighting.h  SSAO.cpp  SSAO.h  ShadowMap.cpp  ShadowMap.h  UIProcess.cpp  UIProcess.h
code/src/RenderProcesses/: DebugProcess.cpp  DebugProcess.h  GBuffer.cpp  GBuffer.h  GPUParticleSystem.cpp  GPUParticleSystem.h  Lighting.cpp  Lighting.h  RenderProcess.h  SSAO.cpp  SSAO.h  ShadowMap.cpp  ShadowMap.h  UIProcess.cpp  UIProcess.h
code/src/Renderers/: DebugRenderer.cpp  DebugRenderer.h  ModelRenderer.cpp  ModelRenderer.h  PresentRenderer.cpp  PresentRenderer.h  QuadRenderer.cpp  QuadRenderer.h  UIRenderer.cpp  UIRenderer.h
code/src/Scene/: SceneImpl.cpp  SceneImpl.h
code/src/Utils/: GenericUtils.cpp  TimeUtils.cpp
docs/: Frame.drawio
engine/Application/: Application.cpp  Application.h  CmdParser.cpp  CmdParser.h  Event.cpp  Event.h
engine/Core/: Console.cpp  Console.h  Debug.cpp  Debug.h  EntryPoint.cpp  Logger.cpp  Logger.h  SystemMemory.cpp  SystemMemory.h  Types.cpp  Types.h  VideoMemory.cpp  VideoMemory.h
engine/Render/: Camera.cpp  Camera.h  CommandList.cpp  CommandList.h  DebugRender.cpp  DebugRender.h  Framebuffer.cpp  Globals.cpp  Globals.h  InitVulkanTypes.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderAPI.cpp  RenderAPI.h  RenderContext.cpp  RenderContext.h  RenderDescriptor.cpp  RenderDescriptor.h  RenderEngine.h  RenderPass.cpp  RenderPass.h  RenderProfiling.cpp  RenderProfiling.h  RenderResource.cpp  RenderResource.h  RenderTarget.cpp  RenderTarget.h  RenderTypes.cpp  RenderTypes.h  RendererBase.cpp  RendererBase.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Texture.cpp  (+9 more)
engine/Render/RenderProcesses/: Bloom.cpp  Bloom.h  DebugProcess.cpp  DebugProcess.h  DeferredLighting.cpp  DeferredLighting.h  ForwardLighting.cpp  ForwardLighting.h  GBuffer.cpp  GBuffer.h  GPUParticleSystem.cpp  GPUParticleSystem.h  Lighting.cpp  Lighting.h  RenderProcess.h  SSAO.cpp  SSAO.h  ShadowMap.cpp  ShadowMap.h  UIProcess.cpp
engine/Scene/: Scene.cpp  Scene.h
engine/Utils/: Angles.cpp  Angles.h  FileSystem.cpp  FileSystem.h  FunctionStack.h  GenericUtils.cpp  GenericUtils.h  TimeUtils.cpp  TimeUtils.h
scripts/: NewSrcFile.bat  header_template.h.tpl  src_template.cpp.tpl
source/engine/: NatvisFile.natvis
source/engine/Application/: Application.cpp  Application.h  CmdParser.cpp  CmdParser.h  Event.cpp  Event.h
source/engine/Core/: Console.cpp  Console.h  Debug.cpp  Debug.h  EntryPoint.cpp  Logger.cpp  Logger.h  SystemMemory.cpp  SystemMemory.h  Types.cpp  Types.h  VideoMemory.cpp  VideoMemory.h
source/engine/Render/: Camera.cpp  Camera.h  CommandList.cpp  Globals.h  (+30 more)
test/: CMakeLists.txt  default.cfg  main.cpp
test/src/: main.cpp
(+49 files in other folders)
